--- a/index.html
+++ b/index.html
@@ -10,6 +10,122 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
+  <main class="site-feature">
+    <div class="site-container">
+      <section class="left-section">
+        <div class="cards-container">
+          <header class="cards-header">
+            <h3 class="cards-logo-text">My Wallets</h3>
+            <a class="button-add-card" href="#"><img src="img/plus.svg" alt="add card button"></a>
+          </header>
+          <ul class="card-list">
+            <li class="card-item">
+              <img class="card-logo" src="img/visa.svg" alt="visa card" width="75" height="45">
+              <p class="card-number">*** *** *** 2592</p>
+              <p class="card-valid">Valid thru: 12/17</p>
+            </li>
 
+            <li class="card-item active">
+              <img class="card-logo" src="img/mastercard.svg" alt="visa card" width="75" height="45">
+              <p class="card-number">*** *** *** 2101</p>
+              <p class="card-valid">Valid thru: 07/19</p>
+            </li>
+
+            <li class="card-item">
+              <img class="card-logo" src="img/maestro.svg" alt="visa card" width="75" height="45">
+              <p class="card-number">*** *** *** 8335</p>
+              <p class="card-valid">Valid thru: 09/17</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="rigth-section">
+        <div class="card-features-container">
+          <header class="features-header">
+            <h3 class="features-header-text">Current Balance</h3>
+            <div class="balance-value">
+              <p>$729.</p>
+              <span>00</span>
+            </div>
+            
+          </header>
+          <ul class="features-list">
+            <li class="feature-item">
+              <button class="feature-button button-minus"></button>
+              <div class="feature-info">
+                <h5>Apple iPhone 7, 128 GB</h5>
+                <p>Electronics #32343424 - 12 July 2015</p>
+              </div>
+              <div class="feature-balance-value">
+                <p>$650.</p>
+                <span>00</span>
+              </div>
+            </li>
+
+            <li class="feature-item">
+              <button class="feature-button button-plus"></button>
+              <div class="feature-info">
+                <h5>Funds Added</h5>
+                <p>Payment #5435 - 11 July 2015</p>
+              </div>
+              <div class="feature-balance-value balance-funds">
+                <p>$900.</p>
+                <span>00</span>
+              </div>
+            </li>
+
+            <li class="feature-item">
+              <button class="feature-button button-minus"></button>
+              <div class="feature-info">
+                <h5>Energy Bill</h5>
+                <p>Other #745237423 - 11 July 2015</p>
+              </div>
+              <div class="feature-balance-value">
+                <p>$84.</p>
+                <span>90</span>
+              </div>
+            </li>
+
+            <li class="feature-item">
+              <button class="feature-button button-minus"></button>
+              <div class="feature-info">
+                <h5>The Eye Cinema Ticket</h5>
+                <p>Entertaiment #32343424 - 10 July 2015</p>
+              </div>
+              <div class="feature-balance-value balance-apple">
+                <p>$40.</p>
+                <span>00</span>
+              </div>
+            </li>
+
+            <li class="feature-item">
+              <button class="feature-button button-minus"></button>
+              <div class="feature-info">
+                <h5>McFood Restaurant</h5>
+                <p>Cafe #32448 - 10 July 2015</p>
+              </div>
+              <div class="feature-balance-value balance-apple">
+                <p>$10.</p>
+              <span>50</span>
+              </div>
+            </li>
+
+            <li class="feature-item">
+              <button class="feature-button button-minus"></button>
+              <div class="feature-info">
+                <h5>Gas Station</h5>
+                <p>Other #2138453 - 10 July 2015</p>
+              </div>
+              <div class="feature-balance-value balance-apple">
+                <p>$30.</p>
+                <span>00</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
